# image-organizer-tui

./: .gitignore  CMakeLists.txt  README.md
ai/: ai.py  requirements.txt  requirements2.txt
ai/test/: EfficientDet.py  lenna.tif  ultralytics_yolov5.py
src/: aiwatcher.cpp  aiwatcher.h  directories.cpp  directories.h  list.cpp  list.h  main.cpp  process.cpp  process.h  search.cpp  search.h  traverse.cpp  traverse.h
